# ml_project_uv

./: README.md  pyproject.toml  requirements_ML.txt  requirements_service.txt
app/: main.py
